<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank calendarFragment</string>
    <string name="app_name" translatable="false">CalendarAppExample</string>
    <string name="calendar_back" translatable="false"><![CDATA[<-]]></string>
    <string name="calendar_forward" translatable="false"><![CDATA[->]]></string>
    <string name="title_activity_my_super" translatable="false">MySuperActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel_id</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="false">fcm_default_channel_name</string>
    <!-- [END fcm_default_icon_string] -->

    <string name="hello_first_fragment" translatable="false">Hello first calendarFragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second calendarFragment. Arg: %1$s</string>
    <string name="all_day">All day</string>
    <string name="every">Every</string>
    <string name="until">Until</string>
    <string name="until...">Until %s</string>

    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string-array name="frequencyTypes">
        <item>@string/days</item>
        <item>@string/weeks</item>
        <item>@string/months</item>
        <item>@string/years</item>
    </string-array>

    <string name="day_and_year_text">Every %d years on %d of %s until %s</string>
    <string name="never">Never</string>
    <string name="times_in_total">Times in total:</string>
    <string name="back">Back</string>
    <string name="repeat">Repeat</string>
    <string name="place">Place</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="no_events">No events</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="period">Period</string>
    <!--    <string name="this_event_will_never_repeat">This event will never repeat</string>-->
    <!--    <string name="this_event_will_repeat_every_d_s_s_s">This event will repeat every %d %s %s %s</string>-->
    <string name="this_event_will_repeat_every_d_s_s_s">Every %d %s %s %s</string>
    <string name="on_d_day">On %d day</string>
    <string name="on_the_last_day">On the last day</string>
    <string name="on_s_d">On %s №%d</string>
    <string name="on_the_last_s">On the last %s</string>
    <string name="on_d_of_s">On %d of %s</string>
    <string name="on_the_last_day_of_s">On the last day of %s</string>
    <string name="on_s_d_of_s">On %s №%d of %s</string>
    <string name="on_the_last_s_of_s">On the last %s of %s</string>
    <string name="_d_times">, overall %d times</string>
    <string name="sample_times">10 times</string>
    <string name="one_time">one time</string>
    <string name="starting_time_s_s">Starting time: %s, %s</string>
    <string name="ending_time_s_s">Ending time: %s, %s</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="on">on</string>
    <string name="events_notifications" translatable="false">events notifications</string>
    <string name="server_key" translatable="false">key=AAAA9qIrU5w:APA91bFxWrluzt2DFIyXvykPNcyOtCA1jPXS1GAlATo_BpV1NiIb8H8GZsdeZkT8vwHbG2Navlxg_te5aKNQbF5z54YPuaP_unmzdaDIWIid4AISDG3NTNwN2rczNME9qPiFX5Agej7R</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="google_sign_in_api_key" translatable="false">"1059282703260-j1otqlruj256io9ouf22dtcqd2neg65n.apps.googleusercontent.com"</string>
    <string name="tables">Tables</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="tracking">Tracking</string>
    <string name="preferences">Preferences</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>