<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/attendance_Fragment"
        android:title="@string/attendance"
        android:icon="@drawable/ic_baseline_assignment_turned_in_40" />

    <item
        android:id="@+id/calendar_Fragment"
        android:title="@string/calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"/>

    <item
        android:id="@+id/blankFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:id="@+id/tracking_Fragment"
        android:title="@string/tracking"
        android:icon="@drawable/ic_baseline_location_on_24"/>

    <item
        android:id="@+id/preferences_Fragment"
        android:title="@string/preferences"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>