<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_add_event_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.Edit_Event_Screen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:padding="15dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:singleLine="false"
                android:layout_centerVertical="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ib_color"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignTop="@id/et_name"
                android:layout_alignEnd="@id/et_name"
                android:layout_alignBottom="@id/et_name"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_choose_color_24"
                app:tint="@color/colorAccent" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_all_day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/all_day"
                android:textSize="18sp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:drawablePadding="10dp"
                android:drawableTint="@drawable/checked_text_view_text_color"
                android:gravity="center_vertical"
                style="@style/Widget.AppCompat.CompoundButton.Switch"
                android:theme="@style/Widget.AppCompat.CompoundButton.Switch"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:useMaterialThemeColors="false" />

            <RelativeLayout
                android:id="@+id/rl_event_setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="Thu, 31.05.2022"
                    android:textSize="12sp"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="Thu, 31.05.2022"
                    android:textSize="12sp"
                    app:cornerRadius="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_choose_start_date"
                    android:layout_alignStart="@+id/btn_choose_start_date"
                    android:layout_alignEnd="@+id/btn_choose_start_date"
                    android:layout_alignParentBottom="true"
                    android:text="08:00"
                    android:textSize="12sp"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_choose_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_choose_end_date"
                    android:layout_alignStart="@+id/btn_choose_end_date"
                    android:layout_alignEnd="@+id/btn_choose_end_date"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="09:00"
                    android:textSize="12sp"
                    app:cornerRadius="10dp" />

            </RelativeLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_repeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:paddingStart="5dp"
            app:drawableTint="@drawable/checked_text_view_text_color"
            app:drawableStartCompat="@drawable/ic_baseline_repeat_24"
            android:drawablePadding="3dp"
            android:hint="@string/does_not_repeat"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ll_end"
            app:layout_constraintStart_toStartOf="@+id/ll_end"
            app:layout_constraintTop_toBottomOf="@+id/ll_end" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_alarm"
            android:textSize="18sp"
            android:paddingHorizontal="10dp"
            android:drawableStart="@drawable/alarm_icon"
            android:drawableTint="@drawable/checked_text_view_text_color"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:theme="@style/Widget.AppCompat.CompoundButton.Switch"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:singleLine="false"
            android:layout_weight="1"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:textSize="18sp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_baseline_subject_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:singleLine="false"
            android:layout_weight="1"
            android:hint="@string/place"
            android:importantForAutofill="no"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>